--- a/pkg/Work/AUTHORS
+++ b/pkg/Work/AUTHORS
@@ -9,5 +9,5 @@ Bettina Grün		S4 class expertise, profiling
 Kurt Hornik		system design, several bug fixes, CRAN uploads, profiling
 Robert Koblischke	optimization of term-document matrix construction, profiling
 David Meyer		system design
-Stefan Theußl		R-Forge tm repository setup
+Stefan Theußl		R-Forge tmparallel repository setup
 Fridolin Wild		parts of the initial implementation for term-document matrix construction
